- El métode isExpedient que comprovaba si contingut instanceof expedient, no retornava el valor esperat. - Configurat plugin de dades externes DIR3 RESt per provar en local. - Implementar les funcions de findAmbFiltre i findRolsAmbCodi del plugin de usuaris Keycloak